# cookiecutter-pypixi-package

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  cookiecutter.json
.github/workflows/: dev.yml
tests/: test_bake_project.py
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  README.md  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: release.yml  tests.yml
{{cookiecutter.repo_name}}/docs/: conf.py
