[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[project]
name = "{{ cookiecutter.repo_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
authors = [
  {email = "{{ cookiecutter.email }}", name = "{{ cookiecutter.author_name }}"}
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

[project.license]
text = "GPL-3.0"

[project.optional-dependencies]
dev = [
  "commitizen",
  "pre-commit",
  "toml",
]
doc = [
  "myst-parser",
  "nbsphinx",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinxemoji"
]
test = [
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "ruff"
]

[project.urls]
Repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}"

[tool.codespell]
skip = "CHANGELOG.md"

[tool.commitizen]
major_version_zero = true
name = "cz_conventional_commits"
tag_format = "v$version"
version_provider = "pep621"
version_scheme = "semver"

[tool.coverage.report]
exclude_lines = [
  "if self.debug:",
  "pragma: no cover",
  "raise NotImplementedError",
  "except ModuleNotFoundError",
  "except ImportError"
]
ignore_errors = true
omit = ["tests/*", "docs/conf.py"]

[tool.coverage.run]
source = ["{{ cookiecutter.python_module_name }}"]

[tool.pixi.dependencies]
python = ">=3.10,<3.14"

[tool.pixi.environments]
dev = ["dev"]
doc = ["doc"]
test = ["test"]

[tool.pixi.feature.dev.tasks]
build = {cmd = "uv build"}

[tool.pixi.feature.doc.tasks]
build-doc = {cmd = "sphinx-build docs docs/_build"}

[tool.pixi.feature.test.tasks]
test = {cmd = "pytest -s --cov={{ cookiecutter.python_module_name }} --cov-report=xml tests"}

[tool.pixi.pypi-dependencies]
{{ cookiecutter.python_module_name }} = {path = ".", editable = true}

[tool.pixi.workspace]
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.email }}>"]
channels = ["conda-forge"]
name = "{{ cookiecutter.repo_name }}"
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
version = "{{ cookiecutter.version }}"

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "D",
  "E",
  "F",
  "I"
]

[tool.ruff.lint.isort]
known-first-party = [
  "{{ cookiecutter.python_module_name }}"
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
  "F401"
]
"tests/test_{{ cookiecutter.python_module_name }}.py" = [
  "D"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv.build-backend]
module-name = "{{ cookiecutter.python_module_name }}"
module-root = ""
